# debtcloset

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyright_exclusions.txt  tox.ini
.github/workflows/: tox.yml
debtcloset/: __init__.py
debtcloset/pyright/: toml.py
debtcloset/ruff/: toml.py
debtcloset/util/: listfmt.py
tests/: test_pyright.py  test_ruff.py
