[project]
name = "debtcloset"
version = "0.3.0"
description = "Creation and maintenance of `exclude` file lists for common code quality tools."
authors = [{ name = "Zach Kurtz", email = "zkurtz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dummio >=0.2.0",
    "listwrap >=0.0.2",
]

[dependency-groups]
dev = [
  "pre-commit >=3.8.0",
  "pyright >=1.1.378",
  "ruff >=0.7.4",
  "pytest >=8.3.2",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[project.urls]
Source = "https://github.com/zkurtz/debtcloset"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.pyright]
include = ["debtcloset", "tests"]
